@startuml
title Modèle métier - Utilisateur / Rôle

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam roundcorner 10

class User {
    +UUID id
    +String username
    +String passwordHash
    +boolean enabled
}

class Application {
    +UUID id
    +String code
    +String description
}

class Role {
    +UUID id
    +String code
    +String description
}

User "*" -- "*" Role : possède >

Application "1" -- "0..*" Role : définit >

@enduml